login_container overlap bug fix

--- a/css/style.css
+++ b/css/style.css
@@ -69,9 +69,6 @@ p {
     height: 250px;
     background-color: #E3E6F3;
     border-radius: 4px;
-    /* border-color: #088178;
-    border-style: solid;
-    border-width: 1px; */
     box-shadow: 2px 4px 4px 2px #a19797;
 }
 
@@ -100,7 +97,7 @@ p {
     border: none;
     border-radius: 4px;
     background: rgb(8, 129, 120);
-    background: linear-gradient(45deg, rgba(8, 129, 120, 1) 0%, rgba(8, 129, 120, 1) 100%, rgba(8, 129, 120, 1) 100%);
+    background: linear-gradient(45deg, #088178 0%, #088178 100%, #088178 100%);
 }
 
 .login-container>.login-btn:hover,
